# nonnormal_anomaly

./: Cargo.toml  README.md  pyproject.toml
examples/: spark_example.py
nonnormal_anomaly/: __init__.py  spark.py
src/: lib.rs
tests/: test_basic.py
