[package]
name = "hypernova_anomaly_core"
version = "1.0.0"
edition = "2021"

[lib]
name = "hypernova_anomaly_core"
crate-type = ["cdylib"]

[dependencies]
# Python-Rust entegrasyonu
pyo3 = { version = "0.21.2", features = ["extension-module"] }

# Arrow köprüsü yerine NumPy köprüsünü kullanıyoruz.
# Bu, çok daha stabil bir bağımlılıktır.
pyo3-numpy = "0.21.0"

# Hesaplama kütüphaneleri
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-stats = "0.5.1"
num-traits = "0.2.18"
rayon = "1.10.0"
thiserror = "1.0.61"
