[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "nonnormal_anomaly"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas>=1.0",
    "numpy>=1.20",
    "pyarrow>=14.0",
    "pyspark>=3.4"
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "nonnormal_anomaly.core"
